// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render PageChange 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li
      class="previous inactive"
    >
      <a
        aria-disabled="true"
        aria-label="Previous page"
        class=" "
        rel="prev"
        role="button"
        tabindex="-1"
      >
        &lt;
      </a>
    </li>
    <li
      class="next"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        class=""
        rel="next"
        role="button"
        tabindex="0"
      >
        &gt;
      </a>
    </li>
  </ul>
</div>
`;

exports[`Should render PageChange with props 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li
      class="previous inactive"
    >
      <a
        aria-disabled="true"
        aria-label="Previous page"
        class=" "
        rel="prev"
        role="button"
        tabindex="-1"
      >
        &lt;
      </a>
    </li>
    <li
      class="active"
    >
      <a
        aria-current="page"
        aria-label="Page 1 is your current page"
        rel="canonical"
        role="button"
        tabindex="-1"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        rel="next"
        role="button"
        tabindex="0"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-label="Page 3"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li
      class="break"
    >
      <a
        role="button"
        tabindex="0"
      >
        ...
      </a>
    </li>
    <li>
      <a
        aria-label="Page 18"
        role="button"
        tabindex="0"
      >
        18
      </a>
    </li>
    <li>
      <a
        aria-label="Page 19"
        role="button"
        tabindex="0"
      >
        19
      </a>
    </li>
    <li>
      <a
        aria-label="Page 20"
        role="button"
        tabindex="0"
      >
        20
      </a>
    </li>
    <li
      class="next"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        class=""
        rel="next"
        role="button"
        tabindex="0"
      >
        &gt;
      </a>
    </li>
  </ul>
</div>
`;
